--- a/sbsclearn/appsettings.json
+++ b/sbsclearn/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-sbsclearn-E4BF2218-C141-4677-A338-7DB22AC86FAE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SbdefaultConn": "Server=(localdb)\\mssqllocaldb;Database=sbsclearn;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
