--- a/sbsclearn/sbsclearn.csproj
+++ b/sbsclearn/sbsclearn.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Entities\ViewModels\" />
+    <Folder Include="Models\Enums\" />
+    <Folder Include="FileUploads\" />
+  </ItemGroup>
+
 </Project>
