more features added

--- a/sbsclearn/appsettings.json
+++ b/sbsclearn/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SbdefaultConn": "Server=(localdb)\\mssqllocaldb;Database=sbsclearn;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SbdefaultConn": "Server=.;Database=sbsclearn;Trusted_Connection=False;Persist Security Info=True;Integrated Security=False;User Id=sa;Password=1234567"
   },
   "Logging": {
     "LogLevel": {
